<?xml version="1.0"?>
<package format="2">
  <name>kmr_description</name>
  <version>0.0.0</version>
  <description>The kmr_description package</description>

  <author email="hatem.fakhruldeen@gmail.com">stoic-roboticist</author>
  <maintainer email="hatem.fakhruldeen@gmail.com">stoic-roboticist</maintainer>
  
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
